--- a/fortune-teller-mvc/fortune-teller-mvc.csproj
+++ b/fortune-teller-mvc/fortune-teller-mvc.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs">
       <DependentUpon>CustomersModel.tt</DependentUpon>
     </Compile>
@@ -186,6 +187,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\starry-night-star-seamless-background.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
